WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93956
[BlackBerry] LayerCompositingThread.h doesn't compile
https://bugs.webkit.org/show_bug.cgi?id=93956
Summary
[BlackBerry] LayerCompositingThread.h doesn't compile
Arvid Nilsson
Reported
2012-08-14 04:45:15 PDT
I forgot to upstream this local change.
Attachments
Patch
(2.06 KB, patch)
2012-08-14 04:47 PDT
,
Arvid Nilsson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Arvid Nilsson
Comment 1
2012-08-14 04:47:10 PDT
Created
attachment 158294
[details]
Patch
Rob Buis
Comment 2
2012-08-14 04:55:23 PDT
Comment on
attachment 158294
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2012-08-14 06:16:50 PDT
Comment on
attachment 158294
[details]
Patch Clearing flags on attachment: 158294 Committed
r125554
: <
http://trac.webkit.org/changeset/125554
>
WebKit Review Bot
Comment 4
2012-08-14 06:16:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug