[BlackBerry] LayerCompositingThread.h doesn't compile https://bugs.webkit.org/show_bug.cgi?id=93956

Patch by Arvid Nilsson <anilsson@rim.com> on 2012-08-14
Reviewed by Rob Buis.

I forgot to upstream this local change.

* platform/graphics/blackberry/LayerCompositingThread.h:
(WebCore::LayerOverride::setBounds):
(WebCore::LayerOverride::setOpacity):

Canonical link: https://commits.webkit.org/111822@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125554 268f45cc-cd09-0410-ab3c-d52691b4dbfc